# AdventOfCode2025

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: readme-stars.yml
src/utils/: input.rs
