[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
overflow-checks = false

[profile.profiling]
inherits = "release"
opt-level = 1
# Crucial for perf stack unwinding
debug = true
strip = false
debug-assertions = false
# Prevent overly aggressive inlining/LTO
lto = false
codegen-units = 16

# Optional: enable frame pointers to improve perf’s unwinding accuracy
force-frame-pointers = true

[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
anyhow = "*"
image = "0.24.5"
gif = "0.12"
itertools = "*"
